test json dir